--- a/css/ucb-article-list-block.css
+++ b/css/ucb-article-list-block.css
@@ -70,3 +70,17 @@
     margin: 0;
     line-height: 1.3;
 }
+
+@media only screen and (max-width: 600px) {
+    .ucb-article-card-img{
+        width: 50px;
+        height: 50px;
+        padding: 0px;
+    }
+    
+    .ucb-article-card-img.title-thumbnail-img{
+        width: 50px;
+        height: 50px;
+        padding: 0px;
+    }
+ }
