--- a/css/block/ucb-article-feature-block.css
+++ b/css/block/ucb-article-feature-block.css
@@ -48,16 +48,16 @@
 
 .ucb-article-card{
     margin-bottom: 10px;
-    border-bottom: solid rgba(128, 128, 128, 0.333);
+    border-bottom: solid 1px rgba(128, 128, 128, 0.333);
     padding-bottom: 10px;
 }
 
 .ucb-stacked-secondary-container{
     margin-top: 10px;
     padding-top: 20px;
-    border-top: solid rgba(128, 128, 128, 0.333);
+    border-top: solid 1px rgba(128, 128, 128, 0.333);
     margin-bottom: 10px;
-    border-bottom: solid rgba(128, 128, 128, 0.333);
+    border-bottom: solid 1px rgba(128, 128, 128, 0.333);
     padding-bottom: 10px;
     margin-left: 10px;
     margin-right: 30px;
@@ -100,12 +100,12 @@
 @media screen and (max-width: 767px) {
     .ucb-stacked-secondary-container > .ucb-article-card{
         margin-bottom: 10px;
-        border-bottom: solid rgba(128, 128, 128, 0.333);
+        border-bottom: solid 1px rgba(128, 128, 128, 0.333);
         padding-bottom: 10px;
         padding-top: 10px;
     }
     .ucb-stacked-secondary-container > .ucb-article-card:first-child {
-        border-top: solid rgba(128, 128, 128, 0.333);
+        border-top: solid 1px rgba(128, 128, 128, 0.333);
         padding-top: 10px;
     }
 
