--- a/css/block/ucb-article-list-block.css
+++ b/css/block/ucb-article-list-block.css
@@ -39,6 +39,7 @@
     height: 500px !important;
     object-fit: cover !important;
     margin-bottom: 20px;
+    width: 100%;
 }
 
 .ucb-article-card-img-full{
