--- a/templates/content/node--newsletter--email-html.html.twig
+++ b/templates/content/node--newsletter--email-html.html.twig
@@ -37,15 +37,15 @@
 {% set designType = node.field_newsletter_type.entity.field_newsletter_design.value %}
 {# Classic #}
 {% if designType == 'classic' %}
-    {% set divStyles = 'background-color: #333; color: #fff;' %}
+    {% set divStyles = 'background-color: #fff; color: #fff;' %}
     {% set aStyles = 'color: #ff9900;' %}
     {% set pStyles = 'color:red;' %}
-    {% set headerStyles = '' %}
-    {% set footerStyles = '' %}
-    {% set cuLogoSrc = cuLogoDark %}
+    {% set headerStyles = 'background-color:#222330;' %}
+    {% set footerStyles = 'background-color:#222330;' %}
+    {% set cuLogoSrc = cuLogoLight %}
 {# Minimal #}
 {% elseif designType == 'minimal' %}
-    {% set divStyles = 'background-color: #333; color: #fff;' %}
+    {% set divStyles = 'background-color: #FFFFFF;' %}
     {% set aStyles = 'color: #ff9900;' %}
     {% set pStyles = 'color:red;' %}
     {% set headerStyles = '' %}
@@ -61,15 +61,15 @@
     {% set cuLogoSrc = cuLogoLight %}
 {# Lightbox #}
 {% elseif designType == 'lightbox' %}
-    {% set divStyles = 'background-color: #333;' %}
+    {% set divStyles = 'background-color: #E9E9E9;' %}
     {% set aStyles = 'color: #ff9900;' %}
-    {% set pStyles = ' color: #fff;' %}
+    {% set pStyles = ' color: #222330;' %}
     {% set headerStyles = '' %}
     {% set footerStyles = '' %}
     {% set cuLogoSrc = cuLogoDark %}
 {# Simple #}
 {% else %}
-    {% set divStyles = 'background-color: #333; color: #fff;' %}
+    {% set divStyles = 'background-color: #FFFFFF; color: #fff;' %}
     {% set aStyles = 'color: #ff9900;' %}
     {% set pStyles = 'color:red;' %}
     {% set headerStyles = 'color:black;' %}
@@ -192,11 +192,11 @@ td>h3>a{
         </head>
     {# END VARIABLE TESTS #}
     {# BIG Wrapper #}
-    <div style="width:700px; margin:auto;align-items:center;{{divStyles}}">
-    <div id="email" style="width:600px;margin: auto;background:white;" data-url="{{base_url}}">
+    <div id="email" style="width:700px; margin:auto;align-items:center;{{divStyles}}">
+    <div style="width:600px;margin: auto;background:white;" data-url="{{base_url}}">
         {# HEADER -- to do: might need to be different tables for styling purposes #}
         <!-- Header --> 
-        <table style='{{divStyles}}'role='presentation' width="100%">
+        <table style='{{headerStyles}}'role='presentation' width="100%">
             <tbody>
                 {# CU LOGO #}
                 <tr>
@@ -346,7 +346,7 @@ td>h3>a{
         <!--Footer-->
         {# TO DO: Style Footer #}
         {% if node.field_newsletter_type.entity.field_newsletter_footer.value %}
-        <table role="presentation" border="0" width="100%" cellspacing="0" style="{{divStyles}}border-collapse: collapse; border-spacing: 0; padding: 0; text-align: left; vertical-align: top; height: 100%; width: 100%; font-family: Helvetica, Arial, sans-serif; font-weight: normal; line-height: 19px; margin: 0; font-size: 14px;">
+        <table role="presentation" border="0" width="100%" cellspacing="0" style="{{footerStyles}}border-collapse: collapse; border-spacing: 0; padding: 0; text-align: left; vertical-align: top; height: 100%; width: 100%; font-family: Helvetica, Arial, sans-serif; font-weight: normal; line-height: 19px; margin: 0; font-size: 14px;">
             <tbody>
                 <tr>
                     <td style="text-align: left; padding-right:10px; padding-left:10px;padding-bottom:20px">
