--- a/css/ucb-secondary-menu-region.css
+++ b/css/ucb-secondary-menu-region.css
@@ -1,6 +1,6 @@
 .ucb-secondary-menu-region {
 	display: flex;
-	flex-direction: row;
+	flex-direction: column;
 }
 
 .ucb-secondary-menu-region .ucb-menu {
