--- a/templates/navigation/menu--main.html.twig
+++ b/templates/navigation/menu--main.html.twig
@@ -32,11 +32,15 @@
   We call a macro which calls itself to render the full tree.
   @see http://twig.sensiolabs.org/doc/tags/macro.html
 #}
+<script src="https://cdn.jsdelivr.net/npm/accessible-menu@3.0.8/dist/accessible-menu.min.js" type="module"></script>
+{{ attach_library('boulder_base/ucb-menu') }}
 {{ menus.menu_links(items, attributes, 0) }}
 {% macro menu_links(items, attributes, menu_level) %}
     {% import _self as menus %}
-    {% if items %}
-        <ul{{ attributes.addClass('ucb-main-menu nav') }}>
+    {% if items %} 
+    <nav id = "ucb-main-menu-nav">
+    <button id="example-toggle" aria-label="Toggle example menu">☰</button>
+        <ul id= "ucb-main-menu" {{ attributes.addClass('ucb-main-menu nav') }}>
             {% for item in items %}
                 {%
                     set classes = [
@@ -63,5 +67,6 @@
                 </li>
             {% endfor %}
         </ul>
+        </nav>
     {% endif %}
 {% endmacro %}
