--- a/css/ucb-menu.css
+++ b/css/ucb-menu.css
@@ -7,6 +7,9 @@
 }
 
 @media only screen and (max-width: 600px) {
+  .ucb-mobile-menu-button-div {
+    line-height: 2em;
+  }
   .ucb-primary-menu-region .ucb-primary-menu-region-container,
   .ucb-secondary-menu-region .ucb-secondary-menu-region-container {
     padding-left: 0;
@@ -35,7 +38,7 @@
   #example-toggle {
     display: block;
     max-width: 100px;
-    font-size: 20px;
+    font-size: 2em;
     margin-left: auto;
   }
   .ucb-menu,
