--- a/templates/block/block--article-list-block.html.twig
+++ b/templates/block/block--article-list-block.html.twig
@@ -180,7 +180,7 @@
   count="{{content.field_art_list_block_item_count|render|striptags|trim}}"
   >
   <div id="ucb-al-loading" class="ucb-list-msg ucb-loading-data">
-    <i class="fas fa-spinner fa-3x fa-pulse"></i>
+    <i class="fa-solid fa-spinner fa-3x fa-spin-pulse"></i>
   </div>
   <div id="ucb-al-error" style="display:none" class="ucb-list-msg">
     <h3>An error has occured - please check your filters and try again</h3>
