--- a/templates/block/block--hero-unit.html.twig
+++ b/templates/block/block--hero-unit.html.twig
@@ -91,7 +91,7 @@
 						<div class="ucb-hero-unit-video-controls-wrapper">
 							<div class="ucb-hero-unit-video-controls">
 								<span class="ucb-hero-unit-video-control-button ucb-hero-unit-video-play-pause" title="Play/Pause video">
-									<i class="fa fa-play"></i>
+									<i class="fa-solid fa-play"></i>
 								</span>
 							</div>
 						</div>
