--- a/templates/content/node--ucb-article.html.twig
+++ b/templates/content/node--ucb-article.html.twig
@@ -177,7 +177,7 @@ pageStyleCSS
 				{% if showDate %}
 					<div role="contentinfo" class="ucb-article-meta">
 						<div class="ucb-article-date">
-							<i class="far fa-calendar"></i>
+							<i class="fa-regular fa-calendar"></i>
 							<span class="sr-only">Published:{{article_date_format}}</span>
 							<span itemprop="datePublished">
 								{{ article_date_format }}
@@ -209,7 +209,7 @@ pageStyleCSS
 				<div role="contentinfo" class="container ucb-article-categories" itemprop="about">
 					<span class="sr-only">Categories:</span>
 					<div class="ucb-article-category-icon">
-						<i class="fas fa-folder-open"></i>
+						<i class="fa-solid fa-folder-open"></i>
 					</div>
 					{{ content.field_ucb_article_categories }}
 				</div>
@@ -218,7 +218,7 @@ pageStyleCSS
 				<div role="contentinfo" class="container ucb-article-tags" itemprop="keywords">
 					<div class="ucb-article-tag-icon">
 						<span class="sr-only">Tags:</span>
-						<i class="fas fa-tags"></i>
+						<i class="fa-solid fa-tags"></i>
 					</div>
 					{{ content.field_ucb_article_tags }}
 				</div>
@@ -227,7 +227,7 @@ pageStyleCSS
 				<div role="contentinfo" class="container ucb-article-issue" itemprop="keywords">
 					<div>
 						<span class="sr-only">Issues:</span>
-						<i class="fa fa-book"></i>
+						<i class="fa-solid fa-book"></i>
 					</div>
 					{{ content.field_appears_in_issue }}
 				</div>
