--- a/templates/navigation/menu--social-media-menu.html.twig
+++ b/templates/navigation/menu--social-media-menu.html.twig
@@ -56,7 +56,7 @@
 					<span class="icon-div">
 						<span class="sr-only">Twitter</span>
 						<span class="icon-bg icon-bg-twitter">
-							<i class="fab fa-twitter icon-foreground"></i>
+							<i class="fa-brands fa-twitter icon-foreground"></i>
 						</span>
 						<span class="vertical-icon-span">Twitter</span>
 					</span>
@@ -66,7 +66,7 @@
 					<span class="icon-div">
 						<span class="sr-only">FaceBook</span>
 						<span class="icon-bg icon-bg-facebook">
-							<i class="fab fa-facebook-f icon-foreground"></i>
+							<i class="fa-brands fa-facebook-f icon-foreground"></i>
 						</span>
 						<span class="vertical-icon-span">FaceBook</span>
 					</span>
@@ -77,7 +77,7 @@
 					<span class="icon-div">
 						<span class="sr-only">Instagram</span>
 						<span class="icon-bg icon-bg-instagram">
-							<i class="fab fa-instagram icon-foreground"></i>
+							<i class="fa-brands fa-instagram icon-foreground"></i>
 						</span>
 						<span class="vertical-icon-span">Instagram</span>
 					</span>
@@ -88,7 +88,7 @@
 					<span class="icon-div">
 						<span class="sr-only">LinkedIn</span>
 						<span class="icon-bg icon-bg-linkedin">
-							<i class="fab fa-linkedin-in icon-foreground"></i>
+							<i class="fa-brands fa-linkedin-in icon-foreground"></i>
 						</span>
 						<span class="vertical-icon-span">LinkedIn</span>
 					</span>
@@ -99,7 +99,7 @@
 					<span class="icon-div">
 						<span class="sr-only">YouTube</span>
 						<span class="icon-bg icon-bg-youtube">
-							<i class="fab fa-youtube icon-foreground"></i>
+							<i class="fa-brands fa-youtube icon-foreground"></i>
 						</span>
 						<span class="vertical-icon-span">YouTube</span>
 					</span>
@@ -109,7 +109,7 @@
 						<span class="icon-div">
 							<span class="sr-only">Pintrest</span>
 							<span class="icon-bg icon-bg-pintrest">
-								<i class="fab fa-pinterest-p icon-foreground"></i>
+								<i class="fa-brands fa-pinterest-p icon-foreground"></i>
 							</span>
 							<span class="vertical-icon-span">Pintrest</span>
 						</span>
@@ -119,7 +119,7 @@
 						<span class="icon-div">
 							<span class="sr-only">Flickr</span>
 							<span class="icon-bg icon-bg-flickr">
-								<i class="fab fa-flickr icon-foreground"></i>
+								<i class="fa-brands fa-flickr icon-foreground"></i>
 							</span>
 							<span class="vertical-icon-span">Flickr</span>
 						</span>
@@ -129,7 +129,7 @@
 						<span class="icon-div">
 							<span class="sr-only">Vimeo</span>
 							<span class="icon-bg icon-bg-vimeo">
-								<i class="fab fa-vimeo-v icon-foreground"></i>
+								<i class="fa-brands fa-vimeo-v icon-foreground"></i>
 							</span>
 							<span class="vertical-icon-span">Vimeo</span>
 						</span>
@@ -139,7 +139,7 @@
 						<span class="icon-div">
 							<span class="sr-only">WordPress</span>
 							<span class="icon-bg icon-bg-wordpress">
-								<i class="fab fa-wordpress-simple icon-foreground"></i>
+								<i class="fa-brands fa-wordpress-simple icon-foreground"></i>
 							</span>
 							<span class="vertical-icon-span">WordPress</span>
 						</span>
@@ -149,7 +149,7 @@
 						<span class="icon-div">
 							<span class="sr-only">TikTok</span>
 							<span class="icon-bg icon-bg-pintrest">
-								<i class="fab fa-tiktok icon-foreground"></i>
+								<i class="fa-brands fa-tiktok icon-foreground"></i>
 							</span>
 							<span class="vertical-icon-span">TikTok</span>
 						</span>
@@ -159,7 +159,7 @@
 						<span class="icon-div">
 							<span class="sr-only">Reddit</span>
 							<span class="icon-bg icon-bg-pintrest">
-								<i class="fab fa-reddit-alien icon-foreground"></i>
+								<i class="fa-brands fa-reddit-alien icon-foreground"></i>
 							</span>
 							<span class="vertical-icon-span">Reddit</span>
 						</span>
@@ -170,7 +170,7 @@
 						<span class="icon-div">
 							<span class="sr-only">Patreon</span>
 							<span class="icon-bg icon-bg-patreon">
-								<i class="fab fa-patreon icon-foreground"></i>
+								<i class="fa-brands fa-patreon icon-foreground"></i>
 							</span>
 							<span class="vertical-icon-span">Patreon</span>
 						</span>
@@ -181,7 +181,7 @@
 						<span class="icon-div">
 							<span class="sr-only">Discord</span>
 							<span class="icon-bg icon-bg-discord">
-								<i class="fab fa-discord icon-foreground"></i>
+								<i class="fa-brands fa-discord icon-foreground"></i>
 							</span>
 							<span class="vertical-icon-span">Discord</span>
 						</span>
@@ -191,7 +191,7 @@
 					<span class="icon-div">
 						<span class="sr-only">Link</span>
 						<span class="icon-bg icon-bg-link">
-							<i class="fas fa-external-link-alt icon-foreground"></i>
+							<i class="fa-solid fa-up-right-from-square icon-foreground"></i>
 						</span>
 						<span class="vertical-icon-span">Link</span>
 					</span>
