--- a/templates/paragraphs/paragraph--slider-image.html.twig
+++ b/templates/paragraphs/paragraph--slider-image.html.twig
@@ -32,7 +32,7 @@
 						<h3>{{ content.field_slide_title|render|striptags|trim }}
 							{% if paragraph.field_slide_link.0.url is not empty %}
 								<a href="{{ paragraph.field_slide_link.0.url }}" class="slide-link">
-									<i class="fa fa-external-link-alt"></i>
+									<i class="fa-solid fa-up-right-from-square"></i>
 								</a>
 							{% endif %}
 						</h3>
