--- a/templates/block/block--video-reveal.html.twig
+++ b/templates/block/block--video-reveal.html.twig
@@ -36,7 +36,7 @@
 		<div id="ucb-video-block-{{ blockId }}" class="ucb-video-text-div">
 				<div class="ucb-video-reveal-controls">
 					<span class="ucb-video-reveal-icon">
-						<i class="fas fa-play-circle"></i>
+						<i class="fa-solid fa-circle-play"></i>
 					</span>
 					<span class="ucb-video-reveal-text">{{ content.field_video_reveal_text}}</span>
 				</div>
@@ -44,7 +44,7 @@
 					{{ content.field_video_reveal_image|render }}
 				</div>
 				<div class="ucb-video-reveal-close">
-					<i class="fas fa-times-circle ucb-video-reveal-close-button"></i>
+					<i class="fa-solid fa-circle-xmark ucb-video-reveal-close-button"></i>
 				</div>
 				{# TO DO - this is where video wrapper will go #}
 				<div class="ucb-video-reveal-video-wrapper" id="ucb-video-reveal-video-wrapper-{{blockId}}">
