--- a/templates/content/node--ucb-article-list.html.twig
+++ b/templates/content/node--ucb-article-list.html.twig
@@ -291,7 +291,7 @@
 
       {# Loading message #}
       <div id="ucb-al-loading" class="ucb-list-msg ucb-loading-data">
-        <i class="fas fa-spinner fa-3x fa-pulse"></i>
+        <i class="fa-solid fa-spinner fa-3x fa-spin-pulse"></i>
       </div>
 
       {# No more Data #}
