--- a/templates/content/node--ucb-person.html.twig
+++ b/templates/content/node--ucb-person.html.twig
@@ -72,7 +72,7 @@
 						<h3>Articles by {{ content.field_ucb_person_first_name }} {{ content.field_ucb_person_last_name }}</h3>
 					</div>
 					<div id="ucb-al-loading" style="display:none" class="ucb-list-msg ucb-loading-data">
-						<i class="fas fa-spinner fa-3x fa-pulse"></i>
+						<i class="fa-solid fa-spinner fa-3x fa-spin-pulse"></i>
 					</div>
 					<div id="ucb-al-error" style="display:none" class="ucb-list-msg">
 						<h3>An error has occured - please check the console. </h3>
