--- a/templates/field/field--field-ucb-person-phone.html.twig
+++ b/templates/field/field--field-ucb-person-phone.html.twig
@@ -8,7 +8,7 @@
 	<ul class="ucb-person-phone-numbers">
 		{% for item in items %}
 		<li>
-			<i class="fa fal fa-phone"></i>&nbsp;<span itemprop="phone">{{ item.content }}</span>
+			<i class="fa-solid fa-phone"></i>&nbsp;<span itemprop="phone">{{ item.content }}</span>
 		</li>
 		{% endfor %}
 	</ul>
