--- a/templates/includes/ucb-footer-menus.html.twig
+++ b/templates/includes/ucb-footer-menus.html.twig
@@ -12,10 +12,10 @@
             <span class="ucb-menu-title">Get Help</span>
             <ul class="ucb-menu nav">
                 <li class="menu-item">
-                    <a href="https://www.colorado.edu/students" class="nav-link">Campus & Student Services</a>
+                    <a href="https://www.colorado.edu/students" class="nav-link">Campus &amp; Student Services</a>
                 </li>
                 <li class="menu-item">
-                    <a href="https://www.colorado.edu/get-help/safety-health-quick-calls" class="nav-link">Safety & Health Services</a>
+                    <a href="https://www.colorado.edu/get-help/safety-health-quick-calls" class="nav-link">Safety &amp; Health Services</a>
                 </li>
                 <li class="menu-item">
                     <a href="http://www.colorado.edu/today" class="nav-link">Campus Communications</a>
@@ -24,7 +24,7 @@
                     <a href="http://alerts.colorado.edu/" class="nav-link">Emergency Alert System</a>
                 </li>
                 <li class="menu-item">
-                    <a href="http://www.colorado.edu/orientation" class="nav-link">New Student & Family Programs</a>
+                    <a href="http://www.colorado.edu/orientation" class="nav-link">New Student &amp; Family Programs</a>
                 </li>
                 <li class="menu-item">
                     <a href="https://www.colorado.edu/campus-accessibility" class="nav-link">Accessibility</a>
@@ -46,7 +46,7 @@
                     <a href="http://www.colorado.edu/events" class="nav-link">Campus Events</a>
                 </li>
                 <li class="menu-item">
-                    <a href="http://www.colorado.edu/pts/" class="nav-link">Parking & Transportation</a>
+                    <a href="http://www.colorado.edu/pts/" class="nav-link">Parking &amp; Transportation</a>
                 </li>
                 <li class="menu-item">
                     <a href="http://www.colorado.edu/visit" class="nav-link">Visit Information</a>
@@ -65,7 +65,7 @@
                     <a href="https://www.colorado.edu/students" class="nav-link">Current Students</a>
                 </li>
                 <li class="menu-item">
-                    <a href="https://www.colorado.edu/facultystaff" class="nav-link">Faculty & Staff</a>
+                    <a href="https://www.colorado.edu/facultystaff" class="nav-link">Faculty &amp; Staff</a>
                 </li>
                 <li class="menu-item">
                     <a href="http://www.colorado.edu/parents" class="nav-link">Families</a>
@@ -81,25 +81,25 @@
             <span class="ucb-menu-title">Initiatives</span>
             <ul class="ucb-menu nav">
                 <li class="menu-item">
-                    <a href="http://www.colorado.edu/industry/" class="nav-link"><i class="fas fa-lg fa-briefcase font-white"></i>&nbsp;&nbsp;Business & Industry Collaborations</a>
+                    <a href="http://www.colorado.edu/industry/" class="nav-link"><i class="fa-solid fa-lg fa-briefcase font-white"></i>&nbsp;&nbsp;Business &amp; Industry Collaborations</a>
                 </li>
                 <li class="menu-item">
-                    <a href="http://www.colorado.edu/odece/" class="nav-link"><i class="fas fa-lg fa-users font-white"></i>&nbsp;&nbsp;Diversity & Community Engagement</a>
+                    <a href="http://www.colorado.edu/odece/" class="nav-link"><i class="fa-solid fa-lg fa-users font-white"></i>&nbsp;&nbsp;Diversity &amp; Community Engagement</a>
                 </li>
                 <li class="menu-item">
-                    <a href="https://www.colorado.edu/free-expression" class="nav-link"><i class="fas fa-lg fa-flag font-white"></i>&nbsp;&nbsp;Free Speech</a>
+                    <a href="https://www.colorado.edu/free-expression" class="nav-link"><i class="fa-solid fa-lg fa-flag font-white"></i>&nbsp;&nbsp;Free Speech</a>
                 </li>
                 <li class="menu-item">
-                    <a href="http://www.colorado.edu/entrepreneurship" class="nav-link"><i class="fas fa-lg fa-lightbulb font-white"></i>&nbsp;&nbsp;Innovation & Entrepreneurship</a>
+                    <a href="http://www.colorado.edu/entrepreneurship" class="nav-link"><i class="fa-solid fa-lg fa-lightbulb font-white"></i>&nbsp;&nbsp;Innovation &amp; Entrepreneurship</a>
                 </li>
                 <li class="menu-item">
-                    <a href="http://www.colorado.edu/international" class="nav-link"><i class="fas fa-lg fa-globe-americas font-white"></i>&nbsp;&nbsp;International Students</a>
+                    <a href="http://www.colorado.edu/international" class="nav-link"><i class="fa-solid fa-lg fa-earth-americas font-white"></i>&nbsp;&nbsp;International Students</a>
                 </li>
                 <li class="menu-item">
-                    <a href="http://outreach.colorado.edu/" class="nav-link"><i class="fas fa-lg fa-road font-white"></i>&nbsp;&nbsp;Public & Outreach Programs</a>
+                    <a href="http://outreach.colorado.edu/" class="nav-link"><i class="fa-solid fa-lg fa-road font-white"></i>&nbsp;&nbsp;Public &amp; Outreach Programs</a>
                 </li>
                 <li class="menu-item">
-                    <a href="http://www.colorado.edu/sustainability" class="nav-link"><i class="fas fa-lg fa-leaf font-white"></i>&nbsp;&nbsp;Sustainability Initiatives</a>
+                    <a href="http://www.colorado.edu/sustainability" class="nav-link"><i class="fa-solid fa-lg fa-leaf font-white"></i>&nbsp;&nbsp;Sustainability Initiatives</a>
                 </li>
             </ul>
         </div>
