--- a/templates/layout/page.html.twig
+++ b/templates/layout/page.html.twig
@@ -122,7 +122,7 @@
         </div>
         <div class="mobile-menu-toggle">
           <button id="mobile-toggle" aria-haspopup="true" aria-expanded="false" aria-controls="mobile-menu" aria-label="Navigation">
-            <i class="fa fas fa-bars" aria-hidden="true"></i>
+            <i class="fa-solid fa-bars" aria-hidden="true"></i>
           </button>
         </div>
       </div>
