--- a/templates/paragraphs/paragraph--blockquote.html.twig
+++ b/templates/paragraphs/paragraph--blockquote.html.twig
@@ -25,7 +25,7 @@
 <blockquote class="ucb-article-blockquote">
 	{% if iconClass %}
 		<div class="ucb-article-blockquote-icon font-gold">
-			<i class="fas fa-solid fa-{{ iconClass }}"></i>
+			<i class="fa-solid fa-{{ iconClass }}"></i>
 		</div>
 	{% endif %}
 	<div class="ucb-article-blockquote-text">
