CuBoulder/tiamat-theme#511 updates tiamat-theme to Font Awesome 6 compatibility (2)

--- a/css/block/expandable-content.css
+++ b/css/block/expandable-content.css
@@ -30,7 +30,7 @@
 	margin-right: 0.25em;
 	content: "\f0fe";
 	transition: transform 0.2s ease-in-out;
-	font-family: 'Font Awesome 5 Free', sans-serif;
+	font-family: 'Font Awesome 6 Free';
 	font-weight: 900;
 	color: #0277bd;
 }
